syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "RacketReel.Infrastructure.Users";

package RacketReel;

service UsersService {
  rpc CreateUserInfo (CreateUserInfoRequest) returns (CreateUserInfoReply);
  
  rpc GetUserInfo (GetUserInfoRequest) returns (GetUserInfoReply);
  
  rpc UpdateUserInfo (UpdateUserInfoRequest) returns (UpdateUserInfoReply);
  
  rpc FollowUser (FollowUserRequest) returns (FollowUserReply);
  
  rpc UnfollowUser (UnfollowUserRequest) returns (UnfollowUserReply);
  
  rpc GetFollowers (GetFollowersRequest) returns (GetFollowersReply);
  
  rpc GetFollowing (GetFollowingRequest) returns (GetFollowingReply);
  
  rpc IsUserFollower (IsUserFollowerRequest) returns (IsUserFollowerReply);
}

message Error
{
  string code = 1;
  string message = 2;
}

message CreateUserInfoRequest {
}

message CreateUserInfoReply {
  bool success = 1;
  optional Error error = 2;
}

message GetUserInfoRequest {
  string user_id = 1;
}

message GetUserInfoReply {
  bool success = 1;
  optional Error error = 2;
  optional UserInfo user_info = 3;
}

message UserInfo {
  string user_id = 1;
  google.protobuf.Timestamp joined_at_utc = 2;
  string display_name = 3;
  string avatar_uri = 4;
}

message UpdateUserInfoRequest {
  optional string display_name = 1;
  optional string avatar_uri = 2;
}

message UpdateUserInfoReply {
  bool success = 1;
  optional Error error = 2;
}

message FollowUserRequest {
  string user_id = 1;
}

message FollowUserReply {
  bool success = 1;
  optional Error error = 2;
}

message UnfollowUserRequest {
  string user_id = 1;
}

message UnfollowUserReply {
  bool success = 1;
  optional Error error = 2;
}

message GetFollowersRequest {
  string user_id = 1;
}

message GetFollowersReply {
  bool success = 1;
  optional Error error = 2;
  repeated UserInfo follower_user_infos = 3;
}

message GetFollowingRequest {
  string user_id = 1;
}

message GetFollowingReply {
  bool success = 1;
  optional Error error = 2;
  repeated UserInfo following_user_infos = 3;
}

message IsUserFollowerRequest {
  string user_id = 1;
  string follower_user_id = 2;
}

message IsUserFollowerReply {
  bool success = 1;
  optional Error error = 2;
  bool isUserFollower = 3;
}